frontend/test/should_fail/method_model_inh_ovrrd_failxf.grg
#using "method_model_inh_ovrrd_failxf.gm"
